<resources>
    <string name="app_name">KALIS-Search</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="info">Info</string>
    <string name="enzyme_interaction">Drug-Enzyme-Metabolism</string>
    <string name="substance">Substance</string>
    <string name="introTextEE">Search for interactions by entering the substances one by one.</string>
    <string name="search">Search</string>
    <string name="defectiveEnzymes">Defective Enzymes</string>
    <string name="add_substance">Add Substance</string>
    <string name="complete_selection">Complete Selection</string>
    <string name="drugdruginteractions">Drug-Drug-Interactions</string>
    <string name="results">Results</string>
    <string name="add_agents">Add Agents</string>
    <string name="menu_cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_agents_added">No substances added</string>
    <string name="substances">Substances</string>
    <string name="enter_agents">ENTER AGENTS</string>
    <string name="title_activity_detail">Interaction</string>
    <string name="add">ADD</string>
    <string name="edit">Edit</string>
    <string name="saved_queries">Saved Queries</string>
    <string name="new_search">New Search</string>
    <string name="clear">Clear</string>
    <string name="interaction">Interaction</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_intro">With this app you can make two different searches at the same time:</string>
    <string name="welcome_text_defective_enzyme">If you know about defective Enzymes in the metabolism of a patient you can specify it and search for known Interactions with entered Substances.</string>
    <string name="interaction_between_substances">Interactions between Substances</string>
    <string name="welcome_text_drug_drug">If you enter multiple Substances, the app will search for Enzymes which are common in the activity of both substances.</string>
    <string name="start">Start</string>
    <string name="pubmedid">PubmedID:</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="enzymes">Enzymes</string>
    <string name="found">Found:</string>
    <string name="enzyme">Enzyme</string>
    <string name="notes">Notes</string>
    <string name="metabolism">Metabolism</string>
    <string name="therapeutic_classification">Therapeutic Classification</string>
    <string name="literature">Literature</string>
</resources>
