<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.v7.widget.CardView
        android:id="@+id/enzymecard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-bold"
                android:text="@string/enzyme_interaction"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="Found:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enzymResultNumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView6"

                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/drugcard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-bold"
                android:text="@string/drugdruginteractions"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="Found:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/drugResultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView8"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/textView8"
                android:layout_toRightOf="@+id/textView8"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>